<resources>
    <string name="app_name">Tasky</string>
    <string name="NewTask">NEW TASK</string>
    <string name="EnterYourTask">Enter your task</string>
    <string name="TaskName">Enter title</string>
    <string name="TaskDescription">Enter description</string>
    <string name="AddTask">ADD TASK</string>
    <string name="HereAreYourTasks">Your tasks:</string>
    <string name="ChooseCategory">Choose category:</string>
    <string name="ChoosePriority">Choose priority:</string>
    <string-array name="category">
        <item>Home</item>
        <item>School/College</item>
        <item>Job</item>
        <item>Fun</item>
        <item>Other</item>
    </string-array>
    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
