<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zadaca.ipand.tasky.NewTaskActivity"
    android:background="@color/bg">

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterYourTask"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tvCategory1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChooseCategory"
        android:layout_marginLeft="5dp"
        android:textSize="17dp"
        android:gravity="left"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tvTask"
        android:layout_marginBottom="10dp"
        />
    <Spinner
        android:id="@+id/sCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCategory1"
        android:entries="@array/category"
        />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sCategory"
        android:imeOptions="actionDone"
        android:hint="@string/TaskName"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTitle"
        android:hint="@string/TaskDescription"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/tvPriority1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChoosePriority"
        android:gravity="left"
        android:layout_marginLeft="5dp"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etDescription"
        android:layout_marginBottom="10dp"
        />
    <Spinner
        android:id="@+id/sPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPriority1"
        android:entries="@array/priority"/>

    <Button
        android:id="@+id/bAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/AddTask"
        android:background="@color/btbg"/>

</RelativeLayout>
